#ifndef LOCATION_HPP_
#define LOCATION_HPP_

    class Location {

    };

#endif
